css/main.css
/* ... */
#app-container .ui-tabs-panel,
#app-container .ui-widget-content {
  background-color: white;
  background: none;
}

.darkmode--activated .ui-widget-content {
  color: #cccccc;
}


/*.ui-widget-content {
  background-color: white;
  background: none;
}*/

.verse-selection-menu,
#module-search-menu,
#display-options-menu {
  position: fixed;
  border: 2px solid #DDDDDD;
  border-radius: 6px;
  box-shadow: 5px 5px 5px #A0A0A0;
  background-color: white;
  z-index: 100;
  display: none;
}

#module-settings-assistant {
  user-select: none;
}

#module-settings-assistant-init {
  padding-top: 2em;
  text-align: center;
}

#module-settings-assistant-add,
#module-settings-assistant-add .content {
  min-height: 570px;
}

#module-settings-assistant .label {
  margin-left: 0.5em;
  cursor: default;
}

.Android #module-settings-assistant input[type="checkbox"] {
  float: left;
  margin-right: 0.5em;
}

#module-settings-assistant .disabled {
  color: gray;
}

#module-settings-assistant .disabled-label {
  margin-left: 0.5em;
  color: grey;
}

#module-settings-assistant section.scrollable,
#module-settings-assistant div.scrollable {
  overflow-y: scroll;
}

#module-list {
  height: 100%;
  width: 45%;
  float: left;
}

#remove-module-list {
  overflow-y: scroll;
  height: 75%;
}

#remove-module-list h2 {
  margin-left: 0;
}

#module-info {
  height: 100%;
  padding: 1em;
}

.selectable-translation-module {
  text-indent: -20px;
  padding-left: 20px;
}

.Android .selectable-translation-module {
  text-indent: inherit;
}

#display-options-menu {
  padding-top: 0.5em;
  width: 40em;
}

.options-group {
  float: left;
  width: 20em;
}

.selection-menu-footer {
  clear: both;
  margin: 0;
  padding: 0.5em;
  border-top: 1px solid #DDDDDD;
}

#book-selection-menu-book-list, #book-selection-menu-chapter-list {
  padding-left: 0.5em;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
}

#book-selection-menu-chapter-list {
  display: none;
  padding-left: 1em;
  padding-right: 1em;
  width: 33em;
  min-height: 20em;
  max-height: 52em;
  overflow-y: scroll;
}

@media only screen and (min-width: 770px) {
  #book-selection-menu-chapter-list {
    width: 39.5em;
    height: 26.5em;
    padding-left: 0.5em;
    padding-right: 0.5em;
  }
}

#book-selection-menu-chapter-list h2 {
  padding-top: 0;
  margin-bottom: 0.5em;
}

#book-selection-menu-chapter-list #chapter-list-chapters {
  flex-direction: row;
  flex-wrap: wrap;
  align-content: flex-start;
}

#book-selection-menu-chapter-list a {
  width: 2em;
  height: 2.5em;
  line-height: 2.5em;
  flex: 0 0 3.3em;
  text-align: center;
  color: black;
}

.book-list-column {
  float: left;
  width: 10em;
  list-style-type: none;
  padding: 0.8em;
  padding-bottom: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.ot-column {
  border-bottom: 1px solid lightgrey;
  height: 26.5em;
}

.book-list-column li {
  margin-bottom: 0.7em;
}

.ot-nt-divider {
  clear: both;
}


/* Formatting for large tablets and desktop */

@media only screen and (min-width: 770px) {
  .ot-column {
    border-bottom: unset;
    height: unset;
  }
  .book-list-column {
    width: unset;
  }
  .ot-nt-divider {
    clear: none;
    border-left: 1px solid #DDDDDD;
    margin-left: 0.5em;
  }
  .ot-nt-divider li {
    margin-left: 1em;
  }
}

.verse-list-menu .focused-button {
  border: 1px dashed #2779aa;
}

.fullscreen-button {
  position: fixed;
  top: 0.5em;
  right: 1em;
  width: auto;
  height: auto;
  padding: 0.3em 0.4em;
  font-size: 1em;
  z-index: 100;
}

.OSX .fullscreen-button {
  display: none;
}

.display-options-button>i {
  font-size: 1.3em;
}


.fg-button {
  cursor: pointer;
}

.verse-list-menu .fg-button {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-right: 1em;
  margin-bottom: 0.5em;
  height: 2.2em;
  min-width: 1em;
  padding: 0 0.8em;
}

.verse-list-menu .display-options-button,
.verse-list-menu .app-info-button,
.verse-list-menu .export-tagged-verses-button {
  justify-content: center;
}

.verse-list-menu i.fas+[i18n],
.verse-list-menu i.fa-caret-down:last-child {
  margin-left: 0.8em;
}

.text-size-menu {
  padding: 0.5em 0.8em;
}

.text-size-menu .verse-list-menu-line {
  padding: 0;
}

.text-size-menu .fg-button {
  margin-bottom: 0;
  height: 2rem;
  width: 1.3rem;
  font-size: 0.8em;
  justify-content: center;
}

.text-size-menu .fg-button:last-child {
  margin-right: 0;
}

.verse-list-menu .fg-button.ui-state-active {
  border-bottom-right-radius: 0;
}

.verse-list-menu .fg-button.ui-state-active .fa-caret-down:before {
  content: "\f00d";
}

.fa-caret-down {
  width: 8px;
}

.book-select-label {
  float: left;
}

.book-select-button .ui-icon,
.tag-select-button .ui-icon,
.module-search-button .ui-icon,
.display-options-button .ui-icon,
.assign-tag-menu-button .ui-icon {
  float: right;
}

.ui-icon-close {
  background-position: -96px -128px !important;
}

.book-available a:link,
.book-available a:hover,
.book-available a:visited,
.book-available a:focus
#book-selection-menu-chapter-list a:link,
#book-selection-menu-chapter-list a:hover,
#book-selection-menu-chapter-list a:visited,
#book-selection-menu-chapter-list a:focus {
  color: black;
}

.book-list-column li a:link,
.book-list-column li.book-available a:visited,
.book-list-column li.book-available a:hover,
.book-list-column li.book-available a:focus,
#book-selection-menu-chapter-list a:link,
#book-selection-menu-chapter-list a:visited,
#book-selection-menu-chapter-list a:hover,
#book-selection-menu-chapter-list a:focus {
  text-decoration: none;
  cursor: default;
  border: 1px solid white;
  padding: 2px;
  margin: 1px;
}

.book-list-column li.book-available a:link,
.book-list-column li.book-available a:visited,
#book-selection-menu-chapter-list a:link,
#book-selection-menu-chapter-list a:visited {
  cursor: pointer;
}
/* ... */

